--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 /*  your css code here. If applicable */
 #yellow{
-	background-color:yellow;
+	background:yellow;
 	border:1px solid green;
 }
 #red{
-	background-color:red;
+	background:red;
 	border:1px solid black;
 }
 #green{
-	background-color:green;
+	background:green;
 	border:1px solid yellow;
 }
